--- a/DA612_A1_RipeDeli_cleansing.ipynb
+++ b/DA612_A1_RipeDeli_cleansing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fe2pE_fJipMyU_-5r15ZBqk8VI4uiGm-",
-      "authorship_tag": "ABX9TyNfgP70JMJM//8TS1GBbWOo",
+      "authorship_tag": "ABX9TyNUInNwdJ3b1vRsl5pYu8BR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1243,6 +1243,37 @@
           },
           "metadata": {},
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "Y8a8i2kCrXyM",
+        "outputId": "6b742db0-0932-4445-ce5a-3af4bca10f83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Product ID                object\n",
+              "Meal                      object\n",
+              "Price                    float64\n",
+              "Larger Size Available       bool\n",
+              "URL                       object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     },
