--- a/DA612_A1_RipeDeli_cleansing.ipynb
+++ b/DA612_A1_RipeDeli_cleansing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fe2pE_fJipMyU_-5r15ZBqk8VI4uiGm-",
-      "authorship_tag": "ABX9TyNUInNwdJ3b1vRsl5pYu8BR",
+      "authorship_tag": "ABX9TyP9mJ5Odb6/ktq22Q0z2k0Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HQAwrBQPknCr",
-        "outputId": "e2a5c144-e1b7-4c87-e3a9-140ea13785ab"
+        "outputId": "7e47d26d-a775-4ec9-df3e-7c0026bd05eb"
       },
       "execution_count": 5,
       "outputs": [
@@ -116,7 +116,7 @@
           "height": 363
         },
         "id": "FKCwCIMdkizW",
-        "outputId": "e6d11faf-ef77-4241-83bf-0a67868881c3"
+        "outputId": "ba210041-f87f-4423-8338-c7ef2ad9f3b1"
       },
       "execution_count": 6,
       "outputs": [
@@ -150,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cfb47eb0-f9b6-4894-b4f4-5d3d74c60b29\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4f7d82e0-c135-43d8-aa10-5f0eff45ae25\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -252,7 +252,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cfb47eb0-f9b6-4894-b4f4-5d3d74c60b29')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f7d82e0-c135-43d8-aa10-5f0eff45ae25')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -304,12 +304,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cfb47eb0-f9b6-4894-b4f4-5d3d74c60b29 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4f7d82e0-c135-43d8-aa10-5f0eff45ae25 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cfb47eb0-f9b6-4894-b4f4-5d3d74c60b29');\n",
+              "        const element = document.querySelector('#df-4f7d82e0-c135-43d8-aa10-5f0eff45ae25');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -329,8 +329,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e04515e8-608e-430e-b4de-3072220f6db1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e04515e8-608e-430e-b4de-3072220f6db1')\"\n",
+              "<div id=\"df-390641b2-f492-4e49-bc5d-f1b6d4abec15\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-390641b2-f492-4e49-bc5d-f1b6d4abec15')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -449,7 +449,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e04515e8-608e-430e-b4de-3072220f6db1 button');\n",
+              "        document.querySelector('#df-390641b2-f492-4e49-bc5d-f1b6d4abec15 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -484,9 +484,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vns2i0bfldjj",
-        "outputId": "8071a65b-b35c-44cf-99fd-e64c95088fdf"
+        "outputId": "38af4bfb-8c21-4b3e-a60d-671dacaedc39"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,6 +498,121 @@
             "Price         0\n",
             "URL           0\n",
             "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Identify if there are duplicates\n",
+        "df.duplicated().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rQjCtDTgu9iD",
+        "outputId": "426c3e68-6661-4415-8b60-83f7e542449e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check spelling with textblob, but not ideal so terminated this part\n",
+        "from textblob import TextBlob"
+      ],
+      "metadata": {
+        "id": "JDQrXvlJtvbd"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def correct_spelling(text):\n",
+        "    return str(TextBlob(text).correct())"
+      ],
+      "metadata": {
+        "id": "VYxsJugjt7On"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"Corrected Meal\"] = df[\"Meal\"].apply(correct_spelling)"
+      ],
+      "metadata": {
+        "id": "YQQJPi17uPoU"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df[[\"Meal\", \"Corrected Meal\"]])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kk7DTL2cua2V",
+        "outputId": "9c16fbcf-d5fc-473a-8647-3ce2ea53597f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                                 Meal  \\\n",
+            "0                         Fill The Freezer Care Packs   \n",
+            "1                         Fill The Freezer With Soups   \n",
+            "2                 Vegan Turmeric Coconut Curry + Tofu   \n",
+            "3                    Vegan Mushroom & Quinoa Moussaka   \n",
+            "4                    Courgette Spinach & Feta Lasagna   \n",
+            "5                                          Beef Daube   \n",
+            "6                                      Butter Chicken   \n",
+            "7                                  Chicken & Leek Pie   \n",
+            "8                                      Lamb Meatballs   \n",
+            "9                                       Shepherds Pie   \n",
+            "10                                    Smoked Fish Pie   \n",
+            "11  Gluten-free Salted Caramel Chocolate Brownie D...   \n",
+            "12      Sticky Date Pudding With Butterscotch Sauce 🍒   \n",
+            "13                                      Fruit Crumble   \n",
+            "\n",
+            "                                       Corrected Meal  \n",
+            "0                           Will The Breeze Are Backs  \n",
+            "1                          Will The Breeze With Soups  \n",
+            "2                   Began Turmeric Coconut Hurry + Of  \n",
+            "3                    Began Mushroom & Guinea Moussaka  \n",
+            "4                      Courgette Pinch & Beta Lasagna  \n",
+            "5                                          Beef Cause  \n",
+            "6                                       Utter Chicken  \n",
+            "7                                  Chicken & Week Lie  \n",
+            "8                                      Lamb Meatballs  \n",
+            "9                                       Shepherds Lie  \n",
+            "10                                    Smoked Wish Lie  \n",
+            "11  Lumen-free Halted Caramel Chocolate Brownie De...  \n",
+            "12      Sticky Late Pudding With Butterscotch Sauce 🍒  \n",
+            "13                                       Fruit Rumble  \n"
           ]
         }
       ]
@@ -521,7 +636,7 @@
       "metadata": {
         "id": "Me5h87lKllHJ"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -535,9 +650,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jVWblI9LlwIv",
-        "outputId": "7c8878e9-d27a-4e3a-f4e6-7b25f6148e10"
+        "outputId": "f2786e0a-2b67-484e-901c-3edb481e3585"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -547,7 +662,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -572,9 +687,9 @@
           "height": 81
         },
         "id": "OpmhNUeRm-kd",
-        "outputId": "ff8237a9-77f7-42b3-ef4a-54e57279a70a"
+        "outputId": "de32db80-4d67-455c-9958-51fe1d69f2ee"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -588,7 +703,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-04ff2fda-6941-484a-bd38-02954f38d858\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8e46338f-d746-4664-9643-54b1d4a48d6b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -627,7 +742,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-04ff2fda-6941-484a-bd38-02954f38d858')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e46338f-d746-4664-9643-54b1d4a48d6b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -679,12 +794,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-04ff2fda-6941-484a-bd38-02954f38d858 button.colab-df-convert');\n",
+              "        document.querySelector('#df-8e46338f-d746-4664-9643-54b1d4a48d6b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-04ff2fda-6941-484a-bd38-02954f38d858');\n",
+              "        const element = document.querySelector('#df-8e46338f-d746-4664-9643-54b1d4a48d6b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -713,7 +828,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 11
         }
       ]
     },
@@ -726,7 +841,7 @@
       "metadata": {
         "id": "RXh00ZAynPzf"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -737,7 +852,7 @@
       "metadata": {
         "id": "KJoXtBDuoq5x"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -749,7 +864,7 @@
       "metadata": {
         "id": "02M5-V9MpEkW"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -760,7 +875,7 @@
       "metadata": {
         "id": "QGuLZEJ1pVX0"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -772,7 +887,7 @@
       "metadata": {
         "id": "ifyNAB81qKsb"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -786,9 +901,9 @@
           "height": 488
         },
         "id": "s4P70yqhnrD2",
-        "outputId": "d2ce47ba-caf1-4fd7-b2b2-982fc2fd50f0"
+        "outputId": "9554475a-b1a6-4191-b180-b06a1c79bf34"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -828,7 +943,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d6cc2c3c-56b6-458d-94f5-b24015df2186\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-28cd6dcf-21cd-4aa8-a869-a1087601d3d8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -973,7 +1088,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d6cc2c3c-56b6-458d-94f5-b24015df2186')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-28cd6dcf-21cd-4aa8-a869-a1087601d3d8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1025,12 +1140,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d6cc2c3c-56b6-458d-94f5-b24015df2186 button.colab-df-convert');\n",
+              "        document.querySelector('#df-28cd6dcf-21cd-4aa8-a869-a1087601d3d8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d6cc2c3c-56b6-458d-94f5-b24015df2186');\n",
+              "        const element = document.querySelector('#df-28cd6dcf-21cd-4aa8-a869-a1087601d3d8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1050,8 +1165,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7fe6e9f4-c312-49e8-acc0-804a97654c8f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7fe6e9f4-c312-49e8-acc0-804a97654c8f')\"\n",
+              "<div id=\"df-cac649e1-0134-41c8-8baf-f6ecda6b39f9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cac649e1-0134-41c8-8baf-f6ecda6b39f9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1170,14 +1285,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7fe6e9f4-c312-49e8-acc0-804a97654c8f button');\n",
+              "        document.querySelector('#df-cac649e1-0134-41c8-8baf-f6ecda6b39f9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_d1d132eb-3069-425e-81d1-22978f218436\">\n",
+              "  <div id=\"id_6a28af03-29b2-4dc2-8e76-8ac8fcd04733\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1221,7 +1336,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_d1d132eb-3069-425e-81d1-22978f218436 button.colab-df-generate');\n",
+              "        document.querySelector('#id_6a28af03-29b2-4dc2-8e76-8ac8fcd04733 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1242,7 +1357,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -1252,11 +1367,11 @@
         "df.dtypes"
       ],
       "metadata": {
-        "id": "Y8a8i2kCrXyM",
-        "outputId": "6b742db0-0932-4445-ce5a-3af4bca10f83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y8a8i2kCrXyM",
+        "outputId": "6b742db0-0932-4445-ce5a-3af4bca10f83"
       },
       "execution_count": 18,
       "outputs": [
@@ -1285,7 +1400,7 @@
       "metadata": {
         "id": "c__WfCD9nsti"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     }
   ]
