--- a/DA612_A1_JUK.ipynb
+++ b/DA612_A1_JUK.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1LUzxReEnM09CEUYF84pbAnjBYYh9wXOE",
-      "authorship_tag": "ABX9TyO/WqBMc1w8bXCJew+u0MLe",
+      "authorship_tag": "ABX9TyP1YM+hXfXghDhIt9tXhSCC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Z6_TYxoRLAZg"
       },
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "zjtZ2_qVLWMn"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "zXxmUDkrLXeh"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "w77-s-PZLsum"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "19FFJLzkLxTV"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "LJzJ64sYMGUA"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -164,100 +164,8 @@
       "metadata": {
         "id": "e8wwcgkJ0X5N"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "images"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IKgxgzrA0yN9",
-        "outputId": "365b7216-c427-487f-870c-71750bcc6504"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['/collections/all-meals/products/beef-lasagne',\n",
-              " '/collections/all-meals/products/chicken-lasagne',\n",
-              " '/collections/all-meals/products/chicken-mushroom-pie',\n",
-              " '/collections/all-meals/products/macaroni-cheese',\n",
-              " '/collections/all-meals/products/beef-bourg-pie',\n",
-              " '/collections/all-meals/products/chipotle-beef-brisket-enchilada',\n",
-              " '/collections/all-meals/products/beef-pumpkin-shepherds-pie',\n",
-              " '/collections/all-meals/products/lamb-moussaka',\n",
-              " '/collections/all-meals/products/smoked-fish-pie',\n",
-              " '/collections/all-meals/products/thai-green-chicken-curry',\n",
-              " '/collections/all-meals/products/no-butter-chicken',\n",
-              " '/collections/all-meals/products/beef-bourguignon-creamy-mash',\n",
-              " '/collections/all-meals/products/beef-bourguignon-pumpkin-mash',\n",
-              " '/collections/all-meals/products/beef-rendang-cauli-rice',\n",
-              " '/collections/all-meals/products/butter-chicken-pilaf',\n",
-              " '/collections/all-meals/products/satay-chicken-cauli-rice',\n",
-              " '/collections/all-meals/products/balsamic-roast-beef-with-potato-bake',\n",
-              " '/collections/all-meals/products/teriyaki-chicken-bento-bowl',\n",
-              " '/collections/all-meals/products/pulled-pork-fennel-ragu-with-pappardelle',\n",
-              " '/collections/all-meals/products/greek-lamb-cottage-pie',\n",
-              " '/collections/all-meals/products/vegan-shepherds-pie',\n",
-              " '/collections/all-meals/products/pumpkin-chickpea-curry',\n",
-              " '/collections/all-meals/products/vegan-coconut-chickpea-curry',\n",
-              " '/collections/all-meals/products/vegan-thai-green-tofu-curry',\n",
-              " '/collections/all-meals/products/chocolate-brownie',\n",
-              " '/collections/all-meals/products/berry-crumble',\n",
-              " '/collections/all-meals/products/sticky-date-pudding',\n",
-              " '/collections/all-meals/products/paneton-sourdough-ficelle-pack-of-2',\n",
-              " '/collections/all-meals/products/paneton-sourdough-loaf',\n",
-              " '/collections/all-meals/products/paneton-mini-croissants',\n",
-              " '/collections/all-meals/products/good-mornings-balance-overnight-oats-mix',\n",
-              " '/collections/all-meals/products/good-mornings-glow-overnight-oats-mix',\n",
-              " '/collections/all-meals/products/garlic-rosemary-superseed-crackers',\n",
-              " '/collections/all-meals/products/kapiti-kahikatea-camembert-cheese',\n",
-              " '/collections/all-meals/products/kapiti-pakari-aged-cheddar-cheese',\n",
-              " '/collections/all-meals/products/te-mata-fig-paste',\n",
-              " '/collections/all-meals/products/pickled-sizzled-onions',\n",
-              " '/collections/all-meals/products/pickled-cheesed-pickles',\n",
-              " '/collections/all-meals/products/pickled-yellow-trees',\n",
-              " '/collections/all-meals/products/six-barrel-soda-syrup',\n",
-              " '/collections/all-meals/products/six-barrel-soda-raspberry-lemon-syrup',\n",
-              " '/collections/all-meals/products/fix-fogg-choc-nut-butter',\n",
-              " '/collections/all-meals/products/fix-fogg-almond-everything-butter',\n",
-              " '/collections/all-meals/products/fix-fogg-creamy-cashew-butter',\n",
-              " '/collections/all-meals/products/pt-chev-triple-chocolate-cookie-bites',\n",
-              " '/collections/all-meals/products/pt-chev-dark-choc-chunk-cookie-bites',\n",
-              " '/collections/all-meals/products/pt-chev-cookie-dark-chocolate-chunk-tub',\n",
-              " '/collections/all-meals/products/pt-chev-cookie-salted-caramel-tub',\n",
-              " '/collections/all-meals/products/kohu-rd-hot-chocolate',\n",
-              " '/collections/all-meals/products/bennetto-dark-chocolate-raspberry-bar',\n",
-              " '/collections/all-meals/products/a-night-off',\n",
-              " '/collections/all-meals/products/care-for-them',\n",
-              " '/collections/all-meals/products/a-week-of-meals',\n",
-              " '/collections/all-meals/products/vegan-care-package',\n",
-              " '/collections/all-meals/products/new-baby-bundle',\n",
-              " '/collections/all-meals/products/best-seller-bundle',\n",
-              " '/collections/all-meals/products/gluten-free-gift-hamper',\n",
-              " '/collections/all-meals/products/double-wishes',\n",
-              " '/collections/all-meals/products/get-well-soon',\n",
-              " '/collections/all-meals/products/feed-a-family',\n",
-              " '/collections/all-meals/products/spoil-them',\n",
-              " '/collections/all-meals/products/mystery-box',\n",
-              " '/collections/all-meals/products/my-underground-deli-cookbook',\n",
-              " '/collections/all-meals/products/my-underground-kitchen-cookbook',\n",
-              " '/collections/all-meals/products/my-underground-everyday',\n",
-              " '/collections/all-meals/products/triple-cookbook-combo',\n",
-              " '/collections/all-meals/products/gift-voucher']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -268,7 +176,7 @@
       "metadata": {
         "id": "jwxvt0faOxtB"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -279,12 +187,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 545
+          "height": 424
         },
         "id": "X58gp5AmO8Ea",
-        "outputId": "080dabd5-76b5-43a4-90ed-dae8b2c0d2d4"
+        "outputId": "5aedd3ed-2650-4c91-a334-9a37a7302c84"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +254,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-235cd6a5-1f71-4f3a-8e86-bdb12dab479f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c67067de-8806-4270-be0d-56f9651f732e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -456,7 +364,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-235cd6a5-1f71-4f3a-8e86-bdb12dab479f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c67067de-8806-4270-be0d-56f9651f732e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -508,12 +416,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-235cd6a5-1f71-4f3a-8e86-bdb12dab479f button.colab-df-convert');\n",
+              "        document.querySelector('#df-c67067de-8806-4270-be0d-56f9651f732e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-235cd6a5-1f71-4f3a-8e86-bdb12dab479f');\n",
+              "        const element = document.querySelector('#df-c67067de-8806-4270-be0d-56f9651f732e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -533,8 +441,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2d00932e-b05b-4646-80df-32d767441aec\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2d00932e-b05b-4646-80df-32d767441aec')\"\n",
+              "<div id=\"df-e54cc41f-c8d8-43e2-aec2-cd91d52571ce\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e54cc41f-c8d8-43e2-aec2-cd91d52571ce')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -653,14 +561,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2d00932e-b05b-4646-80df-32d767441aec button');\n",
+              "        document.querySelector('#df-e54cc41f-c8d8-43e2-aec2-cd91d52571ce button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_88aae81f-2c64-43b1-ab7d-14eb21681e0a\">\n",
+              "  <div id=\"id_f25ee15c-3839-48b3-8d9d-3474998ef2ac\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -704,7 +612,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_88aae81f-2c64-43b1-ab7d-14eb21681e0a button.colab-df-generate');\n",
+              "        document.querySelector('#id_f25ee15c-3839-48b3-8d9d-3474998ef2ac button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -725,19 +633,19 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv(\"/content/drive/My Drive/DA612/juk_meals.csv\")"
+        "df.to_csv(\"/content/drive/My Drive/DA612/juk_meals.csv\", index=False)"
       ],
       "metadata": {
         "id": "Azrew58xPiIH"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
