--- a/DA612_A1_JUK.ipynb
+++ b/DA612_A1_JUK.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1LUzxReEnM09CEUYF84pbAnjBYYh9wXOE",
-      "authorship_tag": "ABX9TyP1YM+hXfXghDhIt9tXhSCC",
+      "authorship_tag": "ABX9TyMbTAYo6FA/Ym9ecZZy+s3a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,7 +164,7 @@
       "metadata": {
         "id": "e8wwcgkJ0X5N"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "jwxvt0faOxtB"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -190,9 +190,9 @@
           "height": 424
         },
         "id": "X58gp5AmO8Ea",
-        "outputId": "5aedd3ed-2650-4c91-a334-9a37a7302c84"
+        "outputId": "b8954586-1ba0-4a00-a171-29a12f10de65"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c67067de-8806-4270-be0d-56f9651f732e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d4610e92-f6a9-498a-b7be-3b97eaf76bc3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -364,7 +364,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c67067de-8806-4270-be0d-56f9651f732e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4610e92-f6a9-498a-b7be-3b97eaf76bc3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -416,12 +416,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c67067de-8806-4270-be0d-56f9651f732e button.colab-df-convert');\n",
+              "        document.querySelector('#df-d4610e92-f6a9-498a-b7be-3b97eaf76bc3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c67067de-8806-4270-be0d-56f9651f732e');\n",
+              "        const element = document.querySelector('#df-d4610e92-f6a9-498a-b7be-3b97eaf76bc3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -441,8 +441,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e54cc41f-c8d8-43e2-aec2-cd91d52571ce\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e54cc41f-c8d8-43e2-aec2-cd91d52571ce')\"\n",
+              "<div id=\"df-762237d0-dcf6-4259-be84-9cbde24e5cd8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-762237d0-dcf6-4259-be84-9cbde24e5cd8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -561,14 +561,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e54cc41f-c8d8-43e2-aec2-cd91d52571ce button');\n",
+              "        document.querySelector('#df-762237d0-dcf6-4259-be84-9cbde24e5cd8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_f25ee15c-3839-48b3-8d9d-3474998ef2ac\">\n",
+              "  <div id=\"id_5bfcea33-fc3e-4120-9813-e0a88ee395eb\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -612,7 +612,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_f25ee15c-3839-48b3-8d9d-3474998ef2ac button.colab-df-generate');\n",
+              "        document.querySelector('#id_5bfcea33-fc3e-4120-9813-e0a88ee395eb button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -633,19 +633,19 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv(\"/content/drive/My Drive/DA612/juk_meals.csv\", index=False)"
+        "df.to_csv(\"/content/drive/My Drive/DA612/juk_meals.csv\")"
       ],
       "metadata": {
         "id": "Azrew58xPiIH"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
